--- a/src/main/webapp/resources/css/design.css
+++ b/src/main/webapp/resources/css/design.css
@@ -1,5 +1,5 @@
 .wrap{
-    margin-top: 50px;
+    /*margin-top: 50px;*/
 }
 .content{
     border-radius: 20px;
@@ -8,8 +8,6 @@
     
     font-family: Georgia;
     color: #fff;
-    
-    box-shadow: 10px 10px 10px #000;
 }
 
 .outputLabel {
@@ -41,3 +39,32 @@
     background: #e67e22;
 }
 
+#volet {
+    position: relative;
+    margin: auto;
+    padding-top: 50px;
+    top: -440px;
+    transition: all .5s ease-in;
+}
+
+#ouvrir {
+    display: block;
+    margin: auto;
+    padding: 10px 25px;
+    width: 110px;
+    background: #27ae60;
+    opacity: 0.8;
+    color: #fff;
+    font-family: Tahoma, Arial, sans-serif;
+    font-weight: bold;
+    text-align: center;
+    border-radius: 0px 0px 10px 10px;
+    cursor: pointer;
+}
+
+#ouvrir:hover {
+    opacity: 1;
+    color: #fff;
+    width: 130px;
+    font-size: larger;   
+}
