--- a/src/main/webapp/resources/css/design.css
+++ b/src/main/webapp/resources/css/design.css
@@ -41,7 +41,7 @@
     position: relative;
     margin: auto;
     padding-top: 50px;
-    top: -440px;
+    /*top: -400px;*/
     transition: all .5s ease-in;
 }
 
@@ -50,19 +50,15 @@
     margin: auto;
     padding: 10px 25px;
     width: 110px;
-    background: #27ae60;
-    opacity: 0.8;
+    background: #8e44ad;
     color: #fff;
     font-family: Tahoma, Arial, sans-serif;
     font-weight: bold;
     text-align: center;
-    border-radius: 0px 0px 10px 10px;
+    border-radius: 0px 0px 20px 20px;
     cursor: pointer;
+    border: 10px solid #9b59b6;
+    
+    transition:border-color 300ms ease-in;
 }
 
-#ouvrir:hover {
-    opacity: 1;
-    color: #fff;
-    width: 130px;
-    font-size: larger;   
-}
