--- a/src/main/webapp/resources/css/design.css
+++ b/src/main/webapp/resources/css/design.css
@@ -25,8 +25,9 @@
 .titre {
     text-align: center;
 }
-#wrapFormSignUp {
-    display: none;
+.erreur {
+    margin: auto;
+    width: 90%;
 }
 
 #contentSignIn {
