--- a/src/main/webapp/resources/css/design.css
+++ b/src/main/webapp/resources/css/design.css
@@ -1,3 +1,54 @@
+body {
+    background : #fff;
+    font-size: 12px;
+    font-family: Verdana, "Verdana CE",  Arial, "Arial CE", "Lucida Grande CE", lucida, "Helvetica CE", sans-serif;
+    color: #fff;
+    margin : 0px;
+    padding : 0px;
+}
+
+h1 {
+    font-family: Arial, "Arial CE", "Lucida Grande CE", lucida, "Helvetica CE", sans-serif;
+    border-bottom: 1px solid #AFAFAF; 
+    font-size:  16px;
+    font-weight: bold;
+    margin: 0px;
+    padding: 0px;
+}
+
+#top {
+    position: relative;
+    background: #036fab;
+    color: white;
+    text-align: center;
+    padding: 5px;
+    margin: 0px 0px 10px 0px;
+}
+
+#top h1{
+     font-size:  25px;
+     margin-bottom: 10px;
+}
+
+#bottom {
+    position: fixed;
+    bottom: 0px;
+    width: 100%;
+    background: #000;
+    opacity: 0.7;
+    padding-top: 5px;
+    padding-left: 5px;
+    color:#fff;
+    text-align: center;
+    box-shadow: 0px -10px 10px #AFAFAF;
+}
+
+.center_content {
+    font-family: Georgia, Arial, sans-serif;
+    color: #000;
+    padding-left: 10px;
+}
+
 .contentSign {
     margin: auto;
     width: 340px;
