--- a/src/main/webapp/resources/css/design.css
+++ b/src/main/webapp/resources/css/design.css
@@ -3,26 +3,29 @@ body {
     font-size: 12px;
     font-family: Verdana, "Verdana CE",  Arial, "Arial CE", "Lucida Grande CE", lucida, "Helvetica CE", sans-serif;
     color: #fff;
-    margin : 0px;
+    margin-top : 10px;
     padding : 0px;
 }
 
 h1 {
     font-family: Arial, "Arial CE", "Lucida Grande CE", lucida, "Helvetica CE", sans-serif;
-    border-bottom: 1px solid #AFAFAF; 
     font-size:  16px;
     font-weight: bold;
     margin: 0px;
     padding: 0px;
+    color: #fff;
 }
 
 #top {
     position: relative;
-    background: #036fab;
+    background-color: #036fab;
     color: white;
-    text-align: center;
     padding: 5px;
     margin: 0px 0px 10px 0px;
+    height: 50px;
+    text-align: center;
+    line-height: 50px;
+    box-shadow: 2px 2px 5px #fff inset, 2px 2px 2px #000;
 }
 
 #top h1{
@@ -36,8 +39,8 @@ h1 {
     width: 100%;
     background: #000;
     opacity: 0.7;
-    padding-top: 5px;
-    padding-left: 5px;
+    height: 40px;
+    line-height: 40px;
     color:#fff;
     text-align: center;
     box-shadow: 0px -10px 10px #AFAFAF;
